[package]
name = "rusty_chip_8"
version = "0.1.0"
authors = ["AlexPeixoto <alex.caldas@gmail.com>"]
edition = "2018"


[dependencies]
sfml = "0.15.1"
csfml-audio-sys = "0.5.0"
csfml-graphics-sys = "0.5.0"
csfml-system-sys = "0.5.0"
csfml-window-sys = "0.5.0"
byteorder = "1"
rand = "0.8.0"
bitmatrix = "0.1.0"
bit-vec = "0.6.3"
derive_more = "0.99.16"
